tests/test_date/bad/rounding_option.catala_en
```catala
declaration scope Test:
  context bday content date
  context today content date
  context ambiguous content boolean

scope Test:
  definition bday equals |2000-02-29|
  definition today equals |2018-03-01|
  definition ambiguous equals bday + 18 year <= today 
```

```catala-test-inline
$ catala Interpret -s Test
[WARNING] In scope "Test", the variable "ambiguous" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_date/bad/rounding_option.catala_en:5.11-5.20:
└─┐
5 │   context ambiguous content boolean
  │           ‾‾‾‾‾‾‾‾‾

catala: internal error, uncaught exception:
        Dates_calc.Dates.AmbiguousComputation
        
#return code 125#
```
